--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
