--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ jwt_secret = "test"
 CLOUDINARY_NAME= "dfownrj92"
 CLOUDINARY_API_KEY= "537848568573929"
 CLOUDINARY_API_SECRET= "ucsH7GRTa7gJSjCx5WEZR3lwSZw"
+emailPassword ="ckmg njnq zcvk qbjh"   #the email password from the google use the vedio from the bookmark nodemailer
+
+
