--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
