--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "dotenv": "^16.4.5",
     "eslint-plugin-react": "*",
     "express": "^4.21.0",
+    "i18next": "^23.15.1",
+    "i18next-express-middleware": "^2.0.0",
+    "i18next-fs-backend": "^2.3.2",
+    "i18next-http-middleware": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
