--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next-fs-backend": "^2.3.2",
     "i18next-http-middleware": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
